Added email address for careers

--- a/EmergereJobCareerWebApi/appsettings.json
+++ b/EmergereJobCareerWebApi/appsettings.json
@@ -24,7 +24,7 @@
     "EmailFrom": "noreply@emergertech.com",
     "EmailTo": "hello@emergertech.com",
     "EmailToCareer": "careers@emergertech.com",
-    "EmailCc": "varadharaj@emergertech.com",
+    "EmailCc": "varadharaj@emergertech.com,gowri.viswanathan@emergertech.com,radhika.chinnaswamy@emergertech.com,yogendran.periyannan@emergertech.com",
     "EmailSubject": "Resume uploaded for the Job Title: ",
     "EmailBody": "Hi Team, <br /> Resume has been uploaded by the resource {0} for the job title {1}.<br /> Please get the resume from the below url. <br /> {2}",
     "IsBodyHtml": true,
